Thu Mar 31 11:33:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (d_lite_strftime, dt_lite_strftime): [DOC]
	  fix indent not to be a big sole verbatim.

Thu Mar 31 11:18:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (Init_date_core): [DOC] fix misplaced doc
	  of DateTime.  [ruby-core:74729] [Bug #12233]

Thu Mar 31 03:41:02 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Merge upstream 69f7e74dde.
	  fix indent.

Wed Mar 30 16:33:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* extension.rdoc, extension.ja.rdoc: [DOC] Fix some errors.
	  Renamed files, wrong method names or argument types; the example
	  GetDBM macro is now updated to the current version of the actual
	  code.  patch by Marcus Stollsteimer in [ruby-core:74690].
	  [Bug #12228]

Wed Mar 30 09:46:01 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/open-uri.rb: Use `userinfo` for authenticated proxy.
	  [fix GH-1148] Patch by @SokichiFujita
	* test/open-uri/test_open-uri.rb: ditto.
	  [fix GH-1309] Patch by @jdamick

Wed Mar 30 01:56:06 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Merge upstream 4f3edf80a0.
	  patched by Anton Sivakov [Bug #12201] [Bug #12202]

Wed Mar 30 01:54:30 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb: add given revision to current changests
	  on associating the revision to the related ticket.

Wed Mar 30 01:53:17 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: update revision.h before merge.

Tue Mar 29 19:33:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: define toupper for its use. fix r54391.

Tue Mar 29 19:23:46 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (rb_isupper, rb_islower, rb_isalpha, rb_isdigit,
	  rb_isalnum, rb_isxdigit, rb_isblank, rb_isspace, rb_isblank,
	  rb_iscntrl, rb_isprint, rb_ispunct, rb_isgraph,
	  rb_tolower, rb_toupper): use inline function to avoid function call.
